[tool.poetry]
name = "paperless-asn-labels"
version = "0.1.0"
description = "Creates archive serial number (ASN) label sheets"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fpdf2 = "^2.7.8"
segno = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
